--- a/components/combobox/apiExamples/helpText.html
+++ b/components/combobox/apiExamples/helpText.html
@@ -1,5 +1,5 @@
 <auro-combobox>
-  <span slot="bib.header">bib Header</span>
+  <span slot="mobile.headline">bib Header</span>
   <span slot="label">Name</span>
   <span slot="helpText">Custom help text</span>
   <auro-menu>
