--- a/components/combobox/apiExamples/noValidate.html
+++ b/components/combobox/apiExamples/noValidate.html
@@ -1,5 +1,5 @@
 <auro-combobox required noValidate>
-  <span slot="bib.header">noVlidate Combobox Header</span>
+  <span slot="mobile.headline">noVlidate Combobox Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
