--- a/components/combobox/apiExamples/persistent.html
+++ b/components/combobox/apiExamples/persistent.html
@@ -1,5 +1,5 @@
 <auro-combobox id="persistent">
-  <span slot="bib.header">Address Combobox</span>
+  <span slot="mobile.headline">Address Combobox</span>
   <span slot="label">Address</span>
   <auro-menu id="customEvent">
     <auro-menuoption value="555 Address Way Seattle, WA 99999">555 Address Way Seattle, WA 99999</auro-menuoption>
