--- a/components/combobox/apiExamples/programmaticValue.html
+++ b/components/combobox/apiExamples/programmaticValue.html
@@ -1,5 +1,5 @@
 <auro-combobox>
-  <span slot="bib.header">bib Header</span>
+  <span slot="mobile.headline">bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
