feat: use bibtemplate for dropdown bib content

--- a/components/datepicker/apiExamples/basicRange.html
+++ b/components/datepicker/apiExamples/basicRange.html
@@ -1,4 +1,5 @@
 <auro-datepicker range>
+  <span slot="mobileHeadline">Datepicker Range Headline</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
   <span slot="mobileDateLabel">Roundtrip</span>
