--- a/components/datepicker/apiExamples/basic.html
+++ b/components/datepicker/apiExamples/basic.html
@@ -1,4 +1,5 @@
 <auro-datepicker>
+  <span slot="mobileHeadline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
