--- a/components/datepicker/src/styles/style-auro-calendar.scss
+++ b/components/datepicker/src/styles/style-auro-calendar.scss
@@ -4,7 +4,6 @@
 // // ---------------------------------------------------------------------
 
 @import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 /* stylelint-disable color-function-notation, at-rule-empty-line-before, order/properties-order, declaration-empty-line-before, declaration-block-no-duplicate-properties */
 
@@ -15,10 +14,12 @@
 
   height: 100vh;
   height: 100dvh; /* dvh = dynamic viewport height */
+}
 
-  @include auro_breakpoint($max: $ds-grid-breakpoint-sm) {
-    width: 100%;
-  }
+.calendars {
+  display: flex;
+
+  flex-direction: row;
 }
 
 .calendarNavBtn {
@@ -55,7 +56,6 @@
 }
 
 .mobileHeader {
-  display: none;
   width: 100%;
   height: var(--mobile-header-height);
   z-index: +1;
@@ -140,7 +140,9 @@
   }
 }
 
-@include auro_breakpoint($max: $ds-grid-breakpoint-sm) {
+:host([isfullscreen]) {
+  width: 100%;
+
   .prevMonth,
   .nextMonth {
     display: none;
@@ -179,13 +181,5 @@
 
       content: '';
     }
-  }
-}
-
-@include auro_breakpoint($min: $ds-grid-breakpoint-sm) {
-  .calendars {
-    display: flex;
-
-    flex-direction: row;
   }
 }
