fix: make dropdown to pull `dropdownbib` properly

--- a/components/combobox/apiExamples/basic.html
+++ b/components/combobox/apiExamples/basic.html
@@ -1,5 +1,5 @@
 <auro-combobox>
-  <span slot="mobile.headline">bib Header</span>
+  <span slot="bib.mobile.headline">bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
@@ -9,5 +9,4 @@
     <auro-menuoption value="Cherries" id="option-4">Cherries</auro-menuoption>
     <auro-menuoption static nomatch>No matching option</auro-menuoption>
   </auro-menu>
-  <span slot="bib.footer">bib Footer</span>
 </auro-combobox>
