--- a/components/combobox/apiExamples/swapValue.html
+++ b/components/combobox/apiExamples/swapValue.html
@@ -1,6 +1,6 @@
 <div id="swapExample">
   <auro-combobox id="swapExampleLeft">
-    <span slot="mobile.headline">Left Combobox Header</span>
+    <span slot="bib.mobile.headline">Left Combobox Header</span>
     <span slot="label">Name</span>
     <auro-menu>
       <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
@@ -20,7 +20,7 @@
     </auro-icon>
   </auro-button>
   <auro-combobox id="swapExampleRight">
-    <span slot="mobile.headline">Right Combobox Header</span>
+    <span slot="bib.mobile.headline">Right Combobox Header</span>
     <span slot="label">Name</span>
     <auro-menu>
       <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
