--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -2,7 +2,9 @@
 
 #bibTemplate {
   display: flex;
+  overflow: hidden;
   height: 100%;
+  max-height: 100%;;
   flex-direction: column;
 }
 
@@ -18,8 +20,9 @@
   min-height: var(--ds-size-1000, $ds-size-1000);
   box-sizing: border-box;
   align-items: end;
-  padding: var(--ds-size-400, $ds-size-400) var(--ds-size-200, $ds-size-200);
-  padding-bottom: 0;
+  padding-top: var(--ds-size-400, $ds-size-400);
+  padding-right: var(--ds-size-700, $ds-size-700);
+  padding-left: var(--ds-size-200, $ds-size-200);
   pointer-events: none;
 }
 
@@ -30,6 +33,9 @@
     padding: 0 var(--ds-size-200, $ds-size-200);
   }
 }
+
+
+
 
 #closeButton{
   position: absolute;
@@ -45,10 +51,15 @@
 }
 
 #bodyContainer {
+  overflow: auto;
   flex: 1 1 100%;
   padding-top: var(--ds-size-100, $ds-size-100);
 }
 
 #footerContainer{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   padding: var(--ds-size-200, $ds-size-200);
 }
