--- a/components/combobox/apiExamples/inDialog.html
+++ b/components/combobox/apiExamples/inDialog.html
@@ -6,7 +6,7 @@
     <span slot="header">Combobox in Dialog</span>
     <div slot="content">
       <auro-combobox id="focusExample">
-        <span slot="mobile.headline">bib Header</span>
+        <span slot="bib.mobile.headline">bib Header</span>
         <span slot="label">Name</span>
         <auro-menu>
           <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
