--- a/components/combobox/apiExamples/noFilter.html
+++ b/components/combobox/apiExamples/noFilter.html
@@ -1,5 +1,5 @@
 <auro-combobox noFilter>
-  <span slot="mobile.headline">noFilter Combobox Header</span>
+  <span slot="bib.mobile.headline">noFilter Combobox Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
