fix: rename some fullscreen related props and slot names BREAKING CHANGE: properties for the fullscreen feature are renamed - `mobileFullscreenBreakpoint` is now `fullscreenBreakpoint` - `bib.mobile.headline` is now `bib.fullscreen.headline`

--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -1,7 +1,7 @@
 <!-- HTML example file -->
 <!-- ----------------- -->
 <auro-combobox id="dynamicMenuExample" noFilter>
-  <span slot="bib.mobile.headline">Dynamic Combobox Header</span>
+  <span slot="bib.fullscreen.headline">Dynamic Combobox Header</span>
   <span slot="label">Name</span>
   <!--
     The auro-combobox element requires an empty auro-menu element
