--- a/components/counter/apiExamples/dropdown-mobile-properties.html
+++ b/components/counter/apiExamples/dropdown-mobile-properties.html
@@ -1,6 +1,6 @@
 <div style="max-width: 350px;">
-  <auro-counter-group id="dropdownCouterExample" isDropdown mobileFullscreenBreakpoint="lg">
-    <span slot="bib.mobile.headline">Counter Bib Header</span>
+  <auro-counter-group id="dropdownCouterExample" isDropdown fullscreenBreakpoint="lg">
+    <span slot="bib.fullscreen.headline">Counter Bib Header</span>
     <div slot="helpText">This is help text</div>
     <auro-counter>
       Adults
@@ -15,7 +15,7 @@
       <span slot="description">Under 2 years</span>
     </auro-counter>
 
-    <div slot="bib.mobile.footer" style="display:flex; justify-content: stretch; gap: 1.5rem">
+    <div slot="bib.fullscreen.footer" style="display:flex; justify-content: stretch; gap: 1.5rem">
       <auro-button id="dropdownCounterExampleResetbutton" fluid variant="secondary" style="flex: 1 50%">Reset</auro-button>
       <auro-button id="dropdownCounterExampleSavebutton" fluid style="flex: 1 50%">Save</auro-button>
     </div>
