--- a/components/combobox/apiExamples/fullscreenBreakpoint.html
+++ b/components/combobox/apiExamples/fullscreenBreakpoint.html
@@ -1,5 +1,5 @@
-<auro-combobox mobileFullscreenBreakpoint="lg">
-  <span slot="bib.mobile.headline">Bib Header</span>
+<auro-combobox fullscreenBreakpoint="lg">
+  <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
