--- a/components/combobox/apiExamples/value.html
+++ b/components/combobox/apiExamples/value.html
@@ -3,7 +3,7 @@
 <auro-button id="valueUndefinedExampleBtn">Reset</auro-button>
 <br/><br/>
 <auro-combobox id="valueExample">
-  <span slot="bib.mobile.headline">Bib Header</span>
+  <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
