--- a/components/counter/apiExamples/dropdown-value-text.html
+++ b/components/counter/apiExamples/dropdown-value-text.html
@@ -1,6 +1,6 @@
 <div style="max-width: 350px;">
   <auro-counter-group isDropdown>
-    <span slot="bib.mobile.headline">Counter Bib Header</span>
+    <span slot="bib.fullscreen.headline">Counter Bib Header</span>
     <div slot="valueText">Custom value text</div>
     <div slot="label"></div>
     <auro-counter>
