docs: add examples of `mobileHeadline` slot

--- a/components/datepicker/apiExamples/dateSlot.html
+++ b/components/datepicker/apiExamples/dateSlot.html
@@ -1,4 +1,5 @@
 <auro-datepicker centralDate="12/03/2023" minDate="12/04/2023" maxDate="12/09/2023">
+  <span slot="mobileHeadline">dateSlot Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
   <span slot="date_12_03_2023">Sold</span>
