--- a/components/datepicker/apiExamples/error.html
+++ b/components/datepicker/apiExamples/error.html
@@ -1,4 +1,5 @@
 <auro-datepicker error="Custom error message" id="errorExample">
+  <span slot="mobileHeadline">Error Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
