--- a/components/datepicker/apiExamples/focus.html
+++ b/components/datepicker/apiExamples/focus.html
@@ -1,4 +1,5 @@
 <auro-datepicker id="focusExampleElem" range>
+  <span slot="mobileHeadline">Focus Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
   <span slot="mobileDateLabel">Choose a date</span>
