--- a/components/datepicker/apiExamples/required.html
+++ b/components/datepicker/apiExamples/required.html
@@ -1,8 +1,10 @@
 <auro-datepicker required setCustomValidityValueMissing="Custom value missing message.">
+  <span slot="mobileHeadline">Required Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
 <auro-datepicker required range setCustomValidityValueMissing="Custom value missing message.">
+  <span slot="mobileHeadline">Required Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
   <span slot="mobileDateLabel">Roundtrip</span>
