--- a/components/datepicker/apiExamples/resetState.html
+++ b/components/datepicker/apiExamples/resetState.html
@@ -1,4 +1,5 @@
 <auro-datepicker id="resetStateExample" range minDate="06/30/2025" calendarStartDate="06/30/2025" calendarFocusDate="06/30/2025" value="02/14/2025" valueEnd="04/05/2025" setCustomValidityRangeUnderflow="The date you entered is too early.">
+  <span slot="mobileHeadline">Reset Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
   <span slot="mobileDateLabel">Choose a date</span>
