--- a/components/datepicker/apiExamples/updateMaxDate.html
+++ b/components/datepicker/apiExamples/updateMaxDate.html
@@ -1,4 +1,5 @@
 <auro-datepicker id="maxDateExample" setCustomValidityRangeOverflow="Selected date is later than maximum date.">
+  <span slot="mobileHeadline">maxDate Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
