--- a/components/datepicker/apiExamples/calendarStartAndEndDate.html
+++ b/components/datepicker/apiExamples/calendarStartAndEndDate.html
@@ -1,4 +1,5 @@
 <auro-datepicker calendarStartDate="01/01/2022" calendarEndDate="06/01/2022">
+  <span slot="mobileHeadline">calendarStartDate & calendarEndDate Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
