--- a/components/datepicker/apiExamples/dynamicSlot.html
+++ b/components/datepicker/apiExamples/dynamicSlot.html
@@ -1,4 +1,5 @@
 <auro-datepicker id="slotContentExample" centralDate="12/13/2023" minDate="12/13/2023" maxDate="01/18/2024" range>
+  <span slot="mobileHeadline">dynamic slot  Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
   <span slot="mobileDateLabel">Choose a date</span>
