--- a/components/datepicker/apiExamples/minDate.html
+++ b/components/datepicker/apiExamples/minDate.html
@@ -1,4 +1,5 @@
 <auro-datepicker minDate="03/25/2028" setCustomValidityRangeUnderflow="Selected date is earlier than the minimum date.">
+  <span slot="mobileHeadline">minDate Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
