--- a/components/datepicker/apiExamples/monthNames.html
+++ b/components/datepicker/apiExamples/monthNames.html
@@ -1,4 +1,5 @@
 <auro-datepicker id="monthNamesExample">
+  <span slot="mobileHeadline">monthNames Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
