--- a/components/datepicker/apiExamples/noValidate.html
+++ b/components/datepicker/apiExamples/noValidate.html
@@ -1,4 +1,5 @@
 <auro-datepicker required noValidate>
+  <span slot="mobileHeadline">noValidate Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
