--- a/components/datepicker/apiExamples/selectedDate.html
+++ b/components/datepicker/apiExamples/selectedDate.html
@@ -1,4 +1,5 @@
 <auro-datepicker selectedDate="06/16/2022">
+  <span slot="mobileHeadline">selectedDate Example</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="mobileDateLabel">Choose a date</span>
 </auro-datepicker>
