--- a/components/datepicker/apiExamples/valueEnd.html
+++ b/components/datepicker/apiExamples/valueEnd.html
@@ -1,4 +1,5 @@
 <auro-datepicker id="valueEndExample" range valueEnd="03/03/2023">
+  <span slot="mobileHeadline">valueEnd Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
   <span slot="mobileDateLabel">Choose a date</span>
