--- a/components/select/apiExamples/basic.html
+++ b/components/select/apiExamples/basic.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
