--- a/components/select/apiExamples/customPlaceholder.html
+++ b/components/select/apiExamples/customPlaceholder.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Please select your preferred option</label>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
