docs: add `bib.fullscreen.headline` slot in examples

--- a/components/select/apiExamples/flexMenuWidth.html
+++ b/components/select/apiExamples/flexMenuWidth.html
@@ -1,4 +1,5 @@
 <auro-select flexMenuWidth id="flexMenuWidthExample">
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="united states">United States has a country code of (+1)</auro-menuoption>
