--- a/components/select/apiExamples/fullscreenBreakpoint.html
+++ b/components/select/apiExamples/fullscreenBreakpoint.html
@@ -1,7 +1,6 @@
-<auro-select id="valueAlert">
+<auro-select fullscreenBreakpoint="lg">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <label slot="placeholder">Placeholder Text</label>
-  <auro-menu id="valueAlertMenu">
+  <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
     <auro-menuoption value="duration">Duration</auro-menuoption>
