--- a/components/select/apiExamples/inDialog.html
+++ b/components/select/apiExamples/inDialog.html
@@ -6,6 +6,7 @@
     <span slot="header">Select in Dialog</span>
     <div slot="content">
       <auro-select id="valueExample" value='["price"]'>
+        <span slot="bib.fullscreen.headline">Bib Headline</span>
         <span slot="label">Name</span>
         <auro-menu>
           <auro-menuoption id="option-0" value="stops">Stops</auro-menuoption>
