--- a/components/select/apiExamples/label.html
+++ b/components/select/apiExamples/label.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="label">Please select a preference</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
