--- a/components/select/apiExamples/multiselect.html
+++ b/components/select/apiExamples/multiselect.html
@@ -1,4 +1,5 @@
 <auro-select multiselect>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Select one or more options</label>
   <auro-menu>
     <auro-menuoption value="1">Option 1</auro-menuoption>
