--- a/components/select/apiExamples/nestedSelect.html
+++ b/components/select/apiExamples/nestedSelect.html
@@ -11,6 +11,7 @@
 
 <!-- Example showing the overflow of auro-select's popover bib with overflow: visible -->
 <auro-dialog id="visibleOverflowDialog">
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="header">Visible Overflow Dialog</span>
   <div slot="content">
     <auro-select id="nestedSelect">
