--- a/components/select/apiExamples/resetState.html
+++ b/components/select/apiExamples/resetState.html
@@ -2,6 +2,7 @@
 <br/><br/>
 
 <auro-select id="resetStateExample" value='["price"]'>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <span slot="label">Name</span>
   <auro-menu>
