--- a/components/select/apiExamples/value.html
+++ b/components/select/apiExamples/value.html
@@ -2,6 +2,7 @@
 <auro-button id="invalidValueExampleBtn">Set Value to Invalid Option</auro-button>
 <br/><br/>
 <auro-select id="valueExample" value='["price"]'>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="label">Name</span>
   <auro-menu>
     <auro-menuoption id="option-0" value="stops">Stops</auro-menuoption>
