--- a/components/select/apiExamples/helpText.html
+++ b/components/select/apiExamples/helpText.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <span slot="helpText">Custom help text message.</span>
   <auro-menu>
