--- a/components/select/apiExamples/presetOption.html
+++ b/components/select/apiExamples/presetOption.html
@@ -1,4 +1,5 @@
 <auro-select>
+  <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <auro-menu>
     <auro-menuoption value="Please select an option" selected>Please select an option</auro-menuoption>
