fix: rename `mobileHeadline` and `mobileDateLabel` to follow `bib.fullscreen.*` pattern BREAKING CHANGE: `mobileDateLabel` slot is renamed to `bib.fullscreen.dateLabel`

--- a/components/datepicker/apiExamples/alertValue.html
+++ b/components/datepicker/apiExamples/alertValue.html
@@ -1,5 +1,5 @@
 <auro-datepicker id="datePickerValueAlert">
-  <span slot="mobileHeadline">Alert Value Example</span>
+  <span slot="bib.fullscreen.headline">Alert Value Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
