--- a/components/datepicker/apiExamples/calendarFocusDate.html
+++ b/components/datepicker/apiExamples/calendarFocusDate.html
@@ -1,5 +1,5 @@
 <auro-datepicker calendarStartDate="01/01/2022" calendarEndDate="12/01/2023" calendarFocusDate="11/01/2022">
-  <span slot="mobileHeadline">calendarFocusDate Example</span>
+  <span slot="bib.fullscreen.headline">calendarFocusDate Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
