--- a/components/datepicker/apiExamples/custom.html
+++ b/components/datepicker/apiExamples/custom.html
@@ -1,5 +1,5 @@
 <custom-datepicker selectedDate="06/16/2022">
-    <span slot="mobileHeadline">custom-datepicker Example</span>
+    <span slot="bib.fullscreen.headline">custom-datepicker Example</span>
     <span slot="fromLabel">Choose a date</span>
-    <span slot="mobileDateLabel">Choose a date</span>
+    <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </custom-datepicker>
