--- a/components/datepicker/apiExamples/disabled.html
+++ b/components/datepicker/apiExamples/disabled.html
@@ -1,4 +1,4 @@
 <auro-datepicker disabled>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
