--- a/components/datepicker/apiExamples/error.html
+++ b/components/datepicker/apiExamples/error.html
@@ -1,7 +1,7 @@
 <auro-datepicker error="Custom error message" id="errorExample">
-  <span slot="mobileHeadline">Error Example</span>
+  <span slot="bib.fullscreen.headline">Error Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 
 <auro-button id="undefinedValueExampleBtnAddError">Set Error</auro-button>
