--- a/components/datepicker/apiExamples/focus.html
+++ b/components/datepicker/apiExamples/focus.html
@@ -1,8 +1,8 @@
 <auro-datepicker id="focusExampleElem" range>
-  <span slot="mobileHeadline">Focus Example</span>
+  <span slot="bib.fullscreen.headline">Focus Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 
 <auro-button id="focusExampleBtn">Apply focus to datepicker</auro-button>
