--- a/components/datepicker/apiExamples/helpText.html
+++ b/components/datepicker/apiExamples/helpText.html
@@ -1,6 +1,6 @@
 <auro-datepicker>
-  <span slot="mobileHeadline">helpText Example</span>
+  <span slot="bib.fullscreen.headline">helpText Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
   <span slot="helpText">Choose a date must be today or earlier.</span>
 </auro-datepicker>
