--- a/components/datepicker/apiExamples/inDialog.html
+++ b/components/datepicker/apiExamples/inDialog.html
@@ -3,7 +3,7 @@
   <auro-button id="datepicker-dialog-opener">Datepicker in Dialog</auro-button>
 
   <auro-dialog id="datepicker-dialog">
-    <span slot="mobileHeadline">inDialog Example</span>
+    <span slot="bib.fullscreen.headline">inDialog Example</span>
     <span slot="header">Datepicker in Dialog</span>
     <div slot="content">
       <auro-datepicker />
