--- a/components/datepicker/apiExamples/localization.html
+++ b/components/datepicker/apiExamples/localization.html
@@ -1,5 +1,5 @@
 <auro-datepicker format="yyyy/mm/dd" id="localizationExample">
-  <span slot="mobileHeadline">Localization Headline</span>
+  <span slot="bib.fullscreen.headline">Localization Headline</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
