--- a/components/datepicker/apiExamples/popoverSlot.html
+++ b/components/datepicker/apiExamples/popoverSlot.html
@@ -1,7 +1,7 @@
 <auro-datepicker centralDate="12/03/2023" minDate="12/04/2023" maxDate="12/09/2023">
-  <span slot="mobileHeadline">Popover Slot Example</span>
+  <span slot="bib.fullscreen.headline">Popover Slot Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
   <span slot="popover_12_03_2023">Tickets for this day are sold out</span>
   <span slot="popover_12_04_2023">Tickets for this day are $89</span>
   <span slot="popover_12_05_2023">Tickets for this day are $100</span>
