--- a/components/datepicker/apiExamples/updateMaxDate.html
+++ b/components/datepicker/apiExamples/updateMaxDate.html
@@ -1,7 +1,7 @@
 <auro-datepicker id="maxDateExample" setCustomValidityRangeOverflow="Selected date is later than maximum date.">
-  <span slot="mobileHeadline">maxDate Example</span>
+  <span slot="bib.fullscreen.headline">maxDate Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 <auro-button id="maxDateChange">Change maxDate to Today's Date</auro-button>
 <auro-button id="resetMaxDate">Reset Datepicker to Initial Example</auro-button>
