--- a/components/datepicker/apiExamples/updateMinDate.html
+++ b/components/datepicker/apiExamples/updateMinDate.html
@@ -1,7 +1,7 @@
 <auro-datepicker id="minDateExample" setCustomValidityRangeUnderflow="Selected date is earlier than the minimum date.">
-  <span slot="mobileHeadline">minDate Example</span>
+  <span slot="bib.fullscreen.headline">minDate Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 <auro-button id="minDateChange">Change minDate to a week from Today</auro-button>
 <auro-button id="resetMinDate">Reset Datepicker to Initial Example</auro-button>
