--- a/components/datepicker/apiExamples/validity.html
+++ b/components/datepicker/apiExamples/validity.html
@@ -1,6 +1,6 @@
 <auro-datepicker required id="validityExample">
-  <span slot="mobileHeadline">validity Example</span>
+  <span slot="bib.fullscreen.headline">validity Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 <auro-button id="validityExampleBtn">Get validity</auro-button>
