--- a/components/form/demo/working.html
+++ b/components/form/demo/working.html
@@ -76,7 +76,7 @@
       <h4>Pick a cool date</h4>
       <auro-datepicker id="date-example" name="dateExample" required>
         <span slot="fromLabel">Choose a date</span>
-        <span slot="mobileDateLabel">Choose a date</span>
+        <span slot="bib.fullscreen.dateLabel">Choose a date</span>
       </auro-datepicker>
     </div>
 
@@ -85,7 +85,7 @@
       <auro-datepicker id="date-range" name="dateRange" required range>
         <span slot="fromLabel">Start</span>
         <span slot="toLabel">End</span>
-        <span slot="mobileDateLabel">Choose a range</span>
+        <span slot="bib.fullscreen.dateLabel">Choose a range</span>
       </auro-datepicker>
     </div>
 
