--- a/components/datepicker/apiExamples/centralDate.html
+++ b/components/datepicker/apiExamples/centralDate.html
@@ -1,5 +1,5 @@
 <auro-datepicker centralDate="06/16/1980">
-  <span slot="mobileHeadline">centralDate Example</span>
+  <span slot="bib.fullscreen.headline">centralDate Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
