--- a/components/datepicker/apiExamples/dynamicSlot.html
+++ b/components/datepicker/apiExamples/dynamicSlot.html
@@ -1,6 +1,6 @@
 <auro-datepicker id="slotContentExample" centralDate="12/13/2023" minDate="12/13/2023" maxDate="01/18/2024" range>
-  <span slot="mobileHeadline">dynamic slot  Example</span>
+  <span slot="bib.fullscreen.headline">dynamic slot  Example</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
