--- a/components/datepicker/apiExamples/value.html
+++ b/components/datepicker/apiExamples/value.html
@@ -1,5 +1,5 @@
 <auro-datepicker id="valueExample" value="02/02/2022">
-  <span slot="mobileHeadline">value Example</span>
+  <span slot="bib.fullscreen.headline">value Example</span>
   <span slot="fromLabel">Choose a date</span>
-  <span slot="mobileDateLabel">Choose a date</span>
+  <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
