docs: update `bib.fullscreen.headline` slot usage and documentation for consistency

--- a/components/counter/apiExamples/api-group-properties.html
+++ b/components/counter/apiExamples/api-group-properties.html
@@ -1,5 +1,6 @@
 <!-- Example of counter-group properties -->
 <auro-counter-group max="10" min="2" isDropdown>
+  <div slot="bib.fullscreen.headline">Group fullscreen label</div>
   <div slot="label">Group with all properties</div>
   <div slot="helpText">Total must be between 2-10</div>
   <div slot="valueText">Custom total display</div>
