--- a/components/counter/apiExamples/dropdown-basic.html
+++ b/components/counter/apiExamples/dropdown-basic.html
@@ -1,4 +1,5 @@
 <auro-counter-group isDropdown>
+  <div slot="bib.fullscreen.headline">Passengers</div>
   <div slot="label">Passengers</div>
   <auro-counter>
     Adults
