--- a/components/counter/apiExamples/dropdown-mobile-properties.html
+++ b/components/counter/apiExamples/dropdown-mobile-properties.html
@@ -1,6 +1,7 @@
 <div style="max-width: 350px;">
   <auro-counter-group id="dropdownCouterExample" isDropdown fullscreenBreakpoint="lg">
-    <span slot="bib.fullscreen.headline">Counter Bib Header</span>
+    <span slot="label">Passengers</span>
+    <span slot="bib.fullscreen.headline">Passengers</span>
     <div slot="helpText">This is help text</div>
     <auro-counter>
       Adults
