--- a/components/counter/apiExamples/dropdown.html
+++ b/components/counter/apiExamples/dropdown.html
@@ -1,6 +1,6 @@
 <div style="max-width: 350px;">
   <auro-counter-group isDropdown>
-    <span slot="bib.fullscreen.headline">Counter Bib Header</span>
+    <span slot="bib.fullscreen.headline">Passengers</span>
     <div slot="label">Passengers</div>
     <auro-counter>
       Adults
