chore: add label slot example to counter component and remove getting started documentation

--- a/components/counter/apiExamples/api-slots.html
+++ b/components/counter/apiExamples/api-slots.html
@@ -1,6 +1,7 @@
 <!-- Example of all available slots -->
 <auro-counter-group isDropdown>
   <!-- Group slots -->
+  <div slot="label">Group with all slots</div>
   <div slot="bib.fullscreen.headline">Group fullscreen label</div>
   <div slot="helpText">Help text appears below the group</div>
   <div slot="valueText">Custom value display</div>
