--- a/components/form/apiExamples/basic.html
+++ b/components/form/apiExamples/basic.html
@@ -1,5 +1,7 @@
 <auro-form>
-  <auro-input>
-      <span slot="label">Hello World</span>
+  <auro-input id="search-box" name="searchBox" required>
+    <span slot="label">Search flights</span>
   </auro-input>
+
+  <auro-button type="submit">Submit</auro-button>
 </auro-form>
