--- a/components/form/demo/index.html
+++ b/components/form/demo/index.html
@@ -40,6 +40,7 @@
           Prism.highlightAll();
         });
     </script>
+    <script type="module" data-demo-script="true" src="./registerDemoDeps.js"></script>
     <script type="module" data-demo-script="true" src="./index.min.js"></script>
 
     <!-- If additional elements are needed for the demo, add them here. -->
