docs(input): fix input span slotting
All examples were using `<slot slot=` and this fixes it to use the proper `<span slot=`.

--- a/components/input/apiExamples/email.html
+++ b/components/input/apiExamples/email.html
@@ -1,4 +1,4 @@
 <auro-input type="email" bordered required>
-  <slot slot="label">Email address</slot>
-  <slot slot="helptext">Please enter your email address.</slot>
+  <span slot="label">Email address</span>
+  <span slot="helptext">Please enter your email address.</span>
 </auro-input>
