--- a/components/input/apiExamples/creditCard.html
+++ b/components/input/apiExamples/creditCard.html
@@ -1,4 +1,4 @@
 <auro-input type="credit-card" bordered required>
-  <slot slot="label">Card number</slot>
-  <slot slot="helptext">Valid credit card numbers must include 16 digits (15 for Amex).</slot>
+  <span slot="label">Card number</span>
+  <span slot="helptext">Valid credit card numbers must include 16 digits (15 for Amex).</span>
 </auro-input>
