--- a/components/input/apiExamples/disabled.html
+++ b/components/input/apiExamples/disabled.html
@@ -1,3 +1,3 @@
 <auro-input disabled bordered type="date">
-  <slot slot="label">Arrival date</slot>
+  <span slot="label">Arrival date</span>
 </auro-input>
