--- a/components/input/apiExamples/maxLength.html
+++ b/components/input/apiExamples/maxLength.html
@@ -1,4 +1,4 @@
 <auro-input maxlength="12" setCustomValidityTooLong="Oops! There were too many characters entered." bordered required>
-  <slot slot="label">Voucher Code</slot>
-  <slot slot="helptext">Please enter your 12 character voucher code.</slot>
+  <span slot="label">Voucher Code</span>
+  <span slot="helptext">Please enter your 12 character voucher code.</span>
 </auro-input>
