--- a/components/input/apiExamples/monthYear.html
+++ b/components/input/apiExamples/monthYear.html
@@ -1,3 +1,3 @@
 <auro-input type="date" format="mm/yy" bordered>
-  <slot slot="label">Expiration date</slot>
+  <span slot="label">Expiration date</span>
 </auro-input>
