--- a/components/input/apiExamples/noValidate.html
+++ b/components/input/apiExamples/noValidate.html
@@ -1,4 +1,4 @@
 <auro-input noValidate required bordered>
-  <slot slot="label">Address</slot>
-  <slot slot="helptext">Please enter your home address.</slot>
+  <span slot="label">Address</span>
+  <span slot="helptext">Please enter your home address.</span>
 </auro-input>
