--- a/components/input/apiExamples/yearMonthDay.html
+++ b/components/input/apiExamples/yearMonthDay.html
@@ -1,3 +1,3 @@
 <auro-input type="date" format="yyyy/mm/dd" bordered>
-  <slot slot="label">Arrival date</slot>
+  <span slot="label">Arrival date</span>
 </auro-input>
