--- a/components/datepicker/apiExamples/basic.html
+++ b/components/datepicker/apiExamples/basic.html
@@ -1,4 +1,4 @@
-<auro-datepicker>
+<auro-datepicker manual>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
