--- a/components/datepicker/apiExamples/basicRange.html
+++ b/components/datepicker/apiExamples/basicRange.html
@@ -1,4 +1,4 @@
-<auro-datepicker range>
+<auro-datepicker range manual>
   <span slot="bib.fullscreen.headline">Datepicker Range Headline</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
