feat: update date string validation to ensure a valid date is set

--- a/components/datepicker/apiExamples/basic.html
+++ b/components/datepicker/apiExamples/basic.html
@@ -1,4 +1,4 @@
-<auro-datepicker>
+<auro-datepicker value="02/22/2026" format="yyyy/mm/dd">
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
