--- a/components/dropdown/apiExamples/floaterConfig.html
+++ b/components/dropdown/apiExamples/floaterConfig.html
@@ -43,7 +43,7 @@
 </div>
 
 <div aria-label="custom label">
-  <auro-dropdown class="customDropdown100" inset bordered rounded chevron autoPlacement placement="right" offset="20">
+  <auro-dropdown class="customDropdown100" inset bordered rounded chevron autoPlacement noFlip placement="right" offset="20">
     <div>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -56,7 +56,7 @@
       </p>
     </div>
     <div slot="trigger">
-      Trigger for right bib with 20px offset and autoPlacement
+      Trigger for right bib with 20px offset, autoPlacement and noFlip
     </div>
   </auro-dropdown>
 </div>
