--- a/components/dropdown/demo/api.html
+++ b/components/dropdown/demo/api.html
@@ -41,7 +41,7 @@
         })
     </script>
     <script type="module">
-      import { initExamples } from "./api.js";
+      import { initExamples } from "./api.min.js";
 
       initExamples();
     </script>
