--- a/components/radio/src/styles/style.scss
+++ b/components/radio/src/styles/style.scss
@@ -79,11 +79,12 @@
   &:after {
     position: absolute;
     z-index: 1;
-    top: var(--ds-size-50, $ds-size-50);
+    top: 50%;
     left: var(--ds-size-50, $ds-size-50);
 
     width: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
     height: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
+    transform: translateY(-50%);
 
     content: '';
 
