--- a/components/checkbox/src/styles/auro-checkbox.scss
+++ b/components/checkbox/src/styles/auro-checkbox.scss
@@ -75,10 +75,13 @@ fieldset {
     -webkit-tap-highlight-color: transparent;
     position: absolute;
     content: '';
-    top: var(--ds-size-50, $ds-size-50);
+
+    top: 50%;
     left: var(--cbxLocation);
     width: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
     height: calc(var(--ds-size-200, $ds-size-200) + var(--ds-size-50, $ds-size-50));
+    transform: translateY(-50%);
+
     border-width: 1px;
     border-style: solid;
     border-radius: var(--ds-border-radius, $ds-border-radius);
