--- a/components/counter/src/styles/counter-button-color.scss
+++ b/components/counter/src/styles/counter-button-color.scss
@@ -9,14 +9,14 @@
 
 .auroButton {
   border-color: unset;
-  background-color: var(--ds-auro-counter-control-ui-bkg);
+  background-color: var(--ds-auro-counter-control-background-color);
   color: var(--ds-auro-button-text-color);
   -webkit-tap-highlight-color: var(--ds-auro-button-tap-color);
 
   @media (hover: hover) {
-    &:active, &:hover{
+    &:active, &:hover {
       &:not(:disabled) {
-        background-color: var(--ds-auro-counter-control-ui-hover);
+        --ds-auro-counter-control-background-color: var(--ds-color-ui-bkg-hover-default, #{$ds-color-ui-bkg-hover-default});
       }
     }
   }
