--- a/components/counter/src/styles/counter-wrapper-color.scss
+++ b/components/counter/src/styles/counter-wrapper-color.scss
@@ -14,6 +14,6 @@
 
 :host {
   ::slotted(*:not(:first-child)) {
-    border-color: var(--ds-color-border-divider-default, $ds-color-border-divider-default);
+    border-color: var(--ds-auro-counter-divider-color);
   }
 }
