perf: update color tokens in radio for theme support #438

--- a/components/radio/apiExamples/disabled.html
+++ b/components/radio/apiExamples/disabled.html
@@ -8,7 +8,7 @@
 <auro-radio-group disabled>
   <span slot="legend">Form label goes here</span>
   <auro-radio id="disabledRadio4" label="Yes" name="radioDemo" value="yes"></auro-radio>
-  <auro-radio id="disabledRadio5" label="No" name="radioDemo" value="no"></auro-radio>
+  <auro-radio id="disabledRadio5" label="No" name="radioDemo" value="no" checked></auro-radio>
   <auro-radio id="disabledRadio6" label="Maybe" name="radioDemo" value="maybe"></auro-radio>
 </auro-radio-group>
 
