--- a/components/radio/src/styles/style.scss
+++ b/components/radio/src/styles/style.scss
@@ -18,7 +18,7 @@
    rule-empty-line-before */
 
 // Import Auro tokens
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 @import '@aurodesignsystem/webcorestylesheets/src/core';
