perf: update color tokens in input for theme support #436

--- a/components/input/src/styles/color.scss
+++ b/components/input/src/styles/color.scss
@@ -3,7 +3,8 @@
 // ---------------------------------------------------------------------
 
 // Support for fallback values
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import 'mixins';
 
@@ -29,7 +30,7 @@ input {
   }
 
   &:disabled {
-    --ds-auro-input-input-text-color: var(--ds-color-text-ui-disabled-default, #{$ds-color-text-ui-disabled-default});
+    --ds-auro-input-text-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
   }
 }
 
@@ -49,36 +50,22 @@ label {
     background-color: var(--ds-auro-input-container-color);
 
     &:focus-within {
-      --ds-auro-input-border-color: var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
+      --ds-auro-input-border-color: var(--ds-advanced-color-state-focused, #{$ds-advanced-color-state-focused});
 
       box-shadow: inset 0 0 0 1px var(--ds-auro-input-border-color);
     }
   }
 }
 
-:host(:not([borderless])) {
-  .wrapper {
-    &:focus-within {
-      --ds-auro-input-border-color: var(--ds-color-border-ui-focus-default, #{$ds-color-border-ui-focus-default});
-
-      @include border-highlight-color;
-    }
-  }
-}
-
-:host([validity]:not([validity='valid'])) {
-  --ds-auro-input-border-color: var(--ds-color-border-error-default, #{$ds-color-border-error-default});
-}
-
 :host([validity]:not([validity='valid'])[bordered]) {
   .wrapper {
-    --ds-auro-input-border-color: var(--ds-color-border-error-default, #{$ds-color-border-error-default});
+    --ds-auro-input-border-color: var(--ds-basic-color-status-error, #{$ds-basic-color-status-error});
 
     box-shadow: inset 0 0 0 1px var(--ds-auro-input-border-color);
   }
 }
 
 :host([disabled]) {
-  --ds-auro-input-border-color: var(--ds-color-border-ui-disabled-default, #{$ds-color-border-ui-disabled-default});
-  --ds-auro-input-label-text-color: var(--ds-color-text-ui-disabled-default, #{$ds-color-text-ui-disabled-default});
+  --ds-auro-input-border-color: var(--ds-basic-color-border-subtle, #{$ds-basic-color-border-subtle});
+  --ds-auro-input-label-text-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
 }
