--- a/components/input/src/styles/label.scss
+++ b/components/input/src/styles/label.scss
@@ -1,4 +1,6 @@
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import 'mixins';
 
