--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -22,7 +22,8 @@
 @import '@aurodesignsystem/webcorestylesheets/src/core';
 
 // Support for fallback values
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 // Support for auroElement styles
 @import '@aurodesignsystem/webcorestylesheets/dist/auroElement/auroElement';
