--- a/components/input/src/styles/borders.scss
+++ b/components/input/src/styles/borders.scss
@@ -1,6 +1,9 @@
 /* stylelint-disable no-duplicate-selectors, max-nesting-depth, no-descending-specificity */
 
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
+
 @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
 @import 'mixins';
