--- a/components/input/src/styles/input.scss
+++ b/components/input/src/styles/input.scss
@@ -1,7 +1,9 @@
 /* stylelint-disable property-no-vendor-prefix, selector-no-qualifying-type */
 
 // Support for fallback values
-@import '@aurodesignsystem/design-tokens/dist/tokens/SCSSVariables';
+
+@import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
+@import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
 @import 'mixins';
 
